--- a/index.html
+++ b/index.html
@@ -2,14 +2,90 @@
 <html>
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Cantarell:400,700" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="main.js"></script>
 </head>
 
 <body>
+    <div class="content-wrapper">
+        <div class="navigation">
+            <ul>
+                <li><img src="assets/logo.svg"></img></li>
+                <li class="link">About</li>
+                <li class="link">Contact</li>
+            </ul>
+        </div>
+        <div class="content">
+            <div class="header">
+              <img class="logo" src="assets/logo2.svg"></img>
+                <div class="text-wrapper">
+                    <div class="text">
+                        <h1>Sabrina</h1><h1>Kantor</h1>
+                    </div>
+                </div>
+                <div class="sub-text-wrapper">
+                    <div class="text">
+                        <h2>Designer</h2><h2>&</h2><h2>Developer</h2>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="color-block"></div>
+                </div>
+            </div>
+            <div class="featured-wrapper">
+              <div class="project-wrapper">
+                  <div class="project">
+                      <div class="text-wrapper">
+                          <h4 class="label">Development</h4>
+                          <h3>Macro Market</h3>
+                      </div>
+                  </div>
+              </div>
+                <div class="project-wrapper">
+                    <div class="project">
+                        <div class="image-wrapper">
+                            <div class="overlay"></div>
+                            <img class="thumbnail" src="images/macro-market-main.png"></img>
+                        </div>
+                        <div class="text-wrapper">
+                            <h4 class="label">Development</h4>
+                            <h3>Macro Market</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-wrapper">
+                    <div class="project">
 
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+                        <div class="image-wrapper">
+                            <div class="overlay"></div>
+                            <img class="thumbnail" src="images/macro-market-main.png"></img>
+                        </div>
+                        <div class="text-wrapper">
+                            <h4 class="label">Development</h4>
+                            <h3>Macro Market</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-wrapper">
+                    <div class="project">
 
+                        <div class="image-wrapper">
+                            <div class="overlay"></div>
+                            <img class="thumbnail" src="images/macro-market-main.png"></img>
+                        </div>
+                        <div class="text-wrapper">
+                            <h4 class="label">Development</h4>
+                            <h3>Macro Market</h3>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
