--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css?family=Cantarell:400,700" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="main.js"></script>
 </head>
@@ -13,14 +14,16 @@
     <div class="content-wrapper">
         <div class="navigation">
             <ul>
-                <li><img src="assets/logo.svg"></img></li>
-                <li class="link">About</li>
-                <li class="link">Contact</li>
+                <li><a href="index.html"><img src="assets/logo.svg"></a></img>
+                </li>
+                <li class="link"><a href="work.html">Work</a></li>
+                <li class="link"><a>Resume</a></li>
             </ul>
         </div>
         <div class="content">
             <div class="header">
-              <img class="logo" src="assets/logo2.svg"></img>
+                <img class="logo" src="assets/logo2.svg"></img>
+                <div class="outline"></div>
                 <div class="text-wrapper">
                     <div class="text">
                         <h1>Sabrina</h1><h1>Kantor</h1>
@@ -35,53 +38,59 @@
                     <div class="color-block"></div>
                 </div>
             </div>
+            <div class="about-section">
+                <div class="text-wrapper">
+                    <h2>Hello,</h2>
+                    <p>I'm Sabrina Kantor, a Designer and Developer living in Boston. I am currently pursuing a degree in
+                        Computer Science and Interactive media at Northeastern University.
+                        I am passionate about exploring the intersection of art, design and technology. Take a look at
+                        my work.</p>
+
+                </div>
+            </div>
+
             <div class="featured-wrapper">
               <div class="project-wrapper">
-                  <div class="project">
+                        <a href="work/deschutes-river-guide.html">
+                  <div class="project deschutes">
+                      <div class="image-wrapper">
+                          <img class="thumbnail" src="images/deschutes-river-guide-main.png"></img>
+                      </div>
                       <div class="text-wrapper">
-                          <h4 class="label">Development</h4>
-                          <h3>Macro Market</h3>
+                          <h4 class="label">Design & Development</h4>
+                          <h3>Deschutes River Guide</h3>
                       </div>
                   </div>
+                </a>
               </div>
                 <div class="project-wrapper">
-                    <div class="project">
-                        <div class="image-wrapper">
-                            <div class="overlay"></div>
-                            <img class="thumbnail" src="images/macro-market-main.png"></img>
+                    <a href="work/macro-market.html">
+                        <div class="project macro">
+                            <div class="image-wrapper">
+                                <img class="thumbnail" src="images/macro-market-main.png"></img>
+                            </div>
+                            <div class="text-wrapper">
+                                <h4 class="label">Development</h4>
+                                <h3>Macro Market</h3>
+                            </div>
                         </div>
-                        <div class="text-wrapper">
-                            <h4 class="label">Development</h4>
-                            <h3>Macro Market</h3>
-                        </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="project-wrapper">
-                    <div class="project">
+                    <a href="work/zealery.html">
+                        <div class="project zealery">
+                            <div class="image-wrapper">
 
-                        <div class="image-wrapper">
-                            <div class="overlay"></div>
-                            <img class="thumbnail" src="images/macro-market-main.png"></img>
+                                <img class="thumbnail" src="images/zealery-main.png"></img>
+                            </div>
+                            <div class="text-wrapper">
+                                <h4 class="label">Design & Development</h4>
+                                <h3>Zealery</h3>
+                            </div>
                         </div>
-                        <div class="text-wrapper">
-                            <h4 class="label">Development</h4>
-                            <h3>Macro Market</h3>
-                        </div>
-                    </div>
+                    </a>
                 </div>
-                <div class="project-wrapper">
-                    <div class="project">
 
-                        <div class="image-wrapper">
-                            <div class="overlay"></div>
-                            <img class="thumbnail" src="images/macro-market-main.png"></img>
-                        </div>
-                        <div class="text-wrapper">
-                            <h4 class="label">Development</h4>
-                            <h3>Macro Market</h3>
-                        </div>
-                    </div>
-                </div>
 
             </div>
         </div>
