portfolio pages added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,700i,800" rel="stylesheet">
     <script src="main.js"></script>
 </head>
 
@@ -22,7 +23,8 @@
         </div>
         <div class="content">
             <div class="header">
-                <img class="logo" src="assets/logo2.svg"></img>
+                 <!-- <img class="logo" src="assets/logo2.svg"></img> -->
+
                 <div class="outline"></div>
                 <div class="text-wrapper">
                     <div class="text">
@@ -35,8 +37,10 @@
                     </div>
                 </div>
                 <div class="right">
+                    <!-- <img class="header-image"src="assets/new.png"></img> -->
                     <div class="color-block"></div>
                 </div>
+                <div class="line"></div>
             </div>
             <div class="about-section">
                 <div class="text-wrapper">
@@ -54,7 +58,7 @@
                         <a href="work/deschutes-river-guide.html">
                   <div class="project deschutes">
                       <div class="image-wrapper">
-                          <img class="thumbnail" src="images/deschutes-river-guide-main.png"></img>
+                          <img class="thumbnail" src="work/images/deschutes-river-guide-main.png"></img>
                       </div>
                       <div class="text-wrapper">
                           <h4 class="label">Design & Development</h4>
@@ -67,7 +71,7 @@
                     <a href="work/macro-market.html">
                         <div class="project macro">
                             <div class="image-wrapper">
-                                <img class="thumbnail" src="images/macro-market-main.png"></img>
+                                <img class="thumbnail" src="work/images/macro-market-main.png"></img>
                             </div>
                             <div class="text-wrapper">
                                 <h4 class="label">Development</h4>
@@ -81,7 +85,7 @@
                         <div class="project zealery">
                             <div class="image-wrapper">
 
-                                <img class="thumbnail" src="images/zealery-main.png"></img>
+                                <img class="thumbnail" src="work/images/zealery-main.png"></img>
                             </div>
                             <div class="text-wrapper">
                                 <h4 class="label">Design & Development</h4>
