--- a/work.html
+++ b/work.html
@@ -29,7 +29,7 @@
                             <h2>Deschutes River Guide</h2>
                             <h3>Summer 2017</h3></div>
                         <div class=" portfolio-item-image ">
-                            <img src="images/deschutes-river-guide-main.png">
+                            <img src="work/images/deschutes-river-guide-main.png">
                         </div>
                     </div>
                 </a>
@@ -42,7 +42,7 @@
                             <h2>Macro Market</h2>
                             <h3>Spring 2017</h3></div>
                         <div class="portfolio-item-image ">
-                            <img src="images/macro-market-main.png">
+                            <img src="work/images/macro-market-main.png">
                         </div>
                     </div>
                 </a>
@@ -55,20 +55,20 @@
                             <h2>Zealery </h2>
                             <h3>Fall 2016</h3></div>
                         <div class=" portfolio-item-image ">
-                            <img src="home-images/music-featured.jpg">
+                            <img src="work/images/zealery-main.png">
                         </div>
                     </div>
                 </a>
             </div>
 
-            <div id="interactive-blindness" class="project portfolio-item">
-                <a href="http://www.sabrinakantor.com/work/interactive-blindness.html">
+            <div id="graphic-design" class="project portfolio-item">
+                <a href="http://www.sabrinakantor.com/work/graphic-design.html">
                     <div class="portfolio-item-wrapper">
                         <div class="portfolio-item-text">
-                            <h2>Interactive Blindness Experience</h2>
+                            <h2>Graphic Design</h2>
                             <h3>Fall 2015</h3></div>
                         <div class=" portfolio-item-image ">
-                            <img src="home-images/blindness.jpg">
+                            <img src="work/images/run.jpg">
                         </div>
                     </div>
                 </a>
