--- a/work/deschutes-river-guide.html
+++ b/work/deschutes-river-guide.html
@@ -26,7 +26,7 @@
             <div class="portfolio-header">
                   <div class="hidden-header">
                 <div class="text-wrapper">
-                    <h2>Design & Development</h2>
+                    <p class="type">Design & Development</p>
                     <h1>Deschutes River </br> Country Guide</h1>
                     <p>Exploring form and shape for graphic design 1.</p>
                 </div>
