--- a/work/graphic-design.html
+++ b/work/graphic-design.html
@@ -18,7 +18,7 @@
                     <a href="../index.html"><img src="../assets/logo.svg"></a>
                     </img>
                 </li>
-                <li class="link"><a href="work.html">Work</a></li>
+                <li class="link"><a href="../work.html">Work</a></li>
                 <li class="link">Resume</li>
             </ul>
         </div>
@@ -26,7 +26,7 @@
             <div class="portfolio-header">
                 <div class="hidden-header">
                     <div class="text-wrapper">
-                        <h2>Design</h2>
+                        <p class="type">Design</p>
                         <h1>Graphic Design </br> Course Work</h1>
                         <p>Exploring form and shape for graphic design 1.</p>
                     </div>
@@ -37,7 +37,8 @@
             </div>
             <div class="section text-section hideme">
                 <div class="text-wrapper">
-                    <h1>1. HIERARCHY COMPOSITIONS</h1>
+                  <div class="line"></div>
+                    <h3>Hierarchy Compositions</h3>
                     <div class="sub-section">
                         <h2>Model</h2>
                         <p>Micheal Rascati</p>
