--- a/work/zealery.html
+++ b/work/zealery.html
@@ -27,9 +27,9 @@
             <div class="portfolio-header">
                 <div class="hidden-header">
                     <div class="text-wrapper">
-                        <h2>Design & Development</h2>
+                        <p class="type">Design & Development</p>
                         <h1>Zealery</h1>
-                        <p>A social shopping app.</p>
+                        <p>A social shopping app built using AngularJs.</p>
                         <a href="https://itunes.apple.com/us/app/zealery/id1129525914?mt=8">
                             <div class="button">Download the App</div>
                         </a>
@@ -41,46 +41,41 @@
             </div>
             <div class="section text-section hideme">
                 <div class="text-wrapper">
-                    <h1>1. HIERARCHY COMPOSITIONS</h1>
-                    <div class="sub-section">
-                        <h2>Model</h2>
-                        <p>Micheal Rascati</p>
-                    </div>
-                    <div class="sub-section">
-                        <h2>Material</h2>
-                        <p>Can-opener, Charcoal</p>
-                    </div>
-
-                    <p>The purpose of this project was to explore how color, shape and size effect the order in which elements are read in a composition. Each poster incorporates typeography, letterform, linework, photography of a mechanical object and photography
-                        of a body part. This was a 6 week project where the first iterations only contained two elements. Each week, we added another element and focused on creating compositions where different elements read first.</p>
+                    <p>Zealery is a social shopping app designed to give users the experience of shopping with friends. Users can see clothing recommendations, browse by style and view what clothing their friends have liked. It was important to our clients
+                        that the app was a fun way users could get their friends opinions while shopping online. As a result, there is a Runway feature where users can ask their friends to vote on different pieces of clothing.
+                    </p>
 
 
+
+                    <p> We started off the project in a research and discovery phase where we worked closely with the client to define brand and audience. As part of this stage, we developed surveys for market research, anaylized the survey responses and
+                        created user personas. From there we began wireframing, first in paper and then eventually taking the designs into Balsamic.
+                    </p>
+
+                    <p> As the rest of the team continued to iterate on our designs, I began development on the app. Our client came to us with an existing backend for the app using Ionic and powered by the ShopStyle API. I implemented my teams designs on
+                        the frontend using AngluarJs.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="image-section hideme">
+                    <div class="image-wrapper two-images">
+                        <img src="images/zealery-search-filter.png">
+                        <img class="section-image" src="images/zealery-filter.png"></div>
+                </div>
+                <div class="image-section hideme">
+                    <div class="image-wrapper two-images-stagger">
+                        <img class="section-image" src="images/zealery-main.png">
+                        <img class="section-image" src="images/zealery-wishlist.png"></div>
+                </div>
+
+                <div class="image-section hideme">
+                    <div class="image-wrapper two-images-horizontal">
+                        <img class="section-image" src="images/zealery-battle-2.png">
+                        <img class="section-image" src="images/zealery-battle.png"></div>
                 </div>
 
             </div>
-            <div class="image-section hideme">
-                <div class="image-wrapper">
-                    <h2>1</h2>
-                    <div class="line"></div>
-                    <img class="section-image" src="images/zealery-main.png"></div>
-            </div>
-
-            <div class="image-section hideme">
-                <div class="image-wrapper">
-                    <img src="images/zealery-search-filter.png">
-                    <img class="section-image" src="images/zealery-filter.png"></div>
-            </div>
-            <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/zealery-wishlist.png"></div>
-            </div>
-            <div class="image-section hideme">
-                <div class="image-wrapper double-image">
-                    <img class="section-image" src="images/zealery-battle-2.png">
-                    <img class="section-image" src="images/zealery-battle.png"></div>
-            </div>
-
         </div>
-    </div>
     </div>
 </body>
 
