--- a/work/macro-market.html
+++ b/work/macro-market.html
@@ -7,84 +7,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../main.js"></script>
-          <script src="../js/portfolio.js"></script>
+    <script src="../js/portfolio.js"></script>
 </head>
 
 <body>
     <div class="content-wrapper macro-market portfolio-page">
         <div class="navigation">
             <ul>
-                <li>
-                    <a href="../index.html"><img src="../assets/logo.svg"></a>
-                    </img>
-                </li>
+                <li><a href="../index.html"><img src="../assets/logo.svg"></a></img></li>
                 <li class="link"><a href="work.html">Work</a></li>
                 <li class="link">Resume</li>
             </ul>
         </div>
         <div class="content">
             <div class="portfolio-header">
-                  <div class="hidden-header">
-                <div class="text-wrapper">
-                    <h2>Development</h2>
-                    <h1>Macro Market</h1>
-                    <p>Exploring form and shape for graphic design 1.</p>
+                <div class="hidden-header">
+                    <div class="text-wrapper">
+                        <p class="type">Development</p>
+                        <h1>Macro Market</h1>
+                        <p>Exploring form and shape for graphic design 1.</p>
+                        <a href="https://macro.market">
+                            <div class="button">View the Beta Site</div>
+                        </a>
+                    </div>
+                    <div class="image-wrapper">
+                        <img src="images/macro-market-main.png"></img>
+                    </div>
                 </div>
-                <div class="image-wrapper">
-                    <img src="images/macro-market-main.png"></img>
-                </div></div>
             </div>
             <div class="section text-section hideme">
                 <div class="text-wrapper">
-                    <h1>1. HIERARCHY COMPOSITIONS</h1>
-                    <div class="sub-section">
-                        <h2>Model</h2>
-                        <p>Micheal Rascati</p>
-                    </div>
-                    <div class="sub-section">
-                        <h2>Material</h2>
-                        <p>Can-opener, Charcoal</p>
-                    </div>
-
-                    <p>The purpose of this project was to explore how color, shape and size effect the order in which elements are read in a composition. Each poster incorporates typeography, letterform, linework, photography of a mechanical object and photography
-                        of a body part. This was a 6 week project where the first iterations only contained two elements. Each week, we added another element and focused on creating compositions where different elements read first.</p>
-
-
+                  <p>Macro Market is a web application I started the development on as an intern at Datawheel.
+                    The site allows companies to register and list themselves under the products and countries they
+                    import and export to. The site is currently populated with seeder data as well as real companies from the Connect
+                    Americas API. I built the site using React, NodeJs and postgreSQL.
+                  </p>
                 </div>
-
             </div>
             <div class="image-section hideme">
                 <div class="image-wrapper">
-                    <h2>1</h2>
-                    <div class="line"></div>
-                    <img class="section-image" src="images/run.jpg"></div>
+                    <img class="section-image" src="images/macro-home.png"></div>
             </div>
             <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/slide.jpg"></div>
+                <div class="image-wrapper"><img class="section-image" src="images/macro-market-main.png"></div>
             </div>
             <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/punctuality.jpg"></div>
+                <div class="image-wrapper"><img class="section-image" src="images/macro-product.png"></div>
             </div>
             <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/twist.jpg"></div>
-            </div>
-            <div class="section text-section hideme">
-                <div class="text-wrapper">
-                    <h1>2. CONCEPT POSTER</h1>
-                    <div class="sub-section">
-                        <h2>Model</h2>
-                        <p>Guy Rice</p>
-                    </div>
-
-                    <p>Our final project in this course was to create a poster for either a play or a book. The goal of this project was to use our understanding of visual heirarchy to portray a complex narriatve to our viewers. I choose Fahrenheit 451 as
-                        it is one of my favorite books.</p>
-
-
-                </div>
-
-            </div>
-            <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/fahrenheit451.jpg"></div>
+                <div class="image-wrapper"><img class="section-image" src="images/macro-search.png"></div>
             </div>
         </div>
     </div>
